--- a/exposition/croquis/README.me
+++ b/exposition/croquis/README.me
@@ -1,1 +1,2 @@
-
+#Croquis d'une des oeuvres de l'exposition Devenirs Partagés - Pratiques de l'AI.
+- Croquis de QUEER. VEUEVE. CANCER. par Dayna Mcleod
